cleaned up code

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "21.1.2"
 
     defaultConfig {
-        applicationId "com.example.manuel.cameraexample"
+        applicationId "com.example.manuel.lightbulb"
         minSdkVersion 16
         targetSdkVersion 22
         versionCode 1
